unreleased changes
==================

- added optimized mode to StartableFacility for Single-call-to-Install scenario that won't start anything before the end of Install (at which point the container is assumed to be completely configured and all components should be there) and it will throw if it can't resolve and start the component.

- added OptimizeDependencyResolution around calls to Install

- Component.IsInNamespace and its sister methods have now overload that let you include components from subnamespaces as well.

- added ability to load assemblies from designated directory (with fair bit of optional filtering using new AssemblyFilter class). It works in three places:
	- AllTypes.FromAssemblyInDirectory() - picks assemblies for registration
	- FromAssembly.InDirectory() - installs installers from assemblies in the directory
	- <install directory="" /> - installs installers from assemblies in directory via XML

- TypedFactoryFacility - added ability to configure factory inline: Component.For<IFooFactory>().AsFactory(f => f.SelectedWith("selectorKey")) 

- Changed IModelInterceptorSelector's signature and behavior (see breakingChanges.txt for details)

- added metadata facility, which lets you associate some metadata with the component and access it from the call site.

- removed IProxyHook interface (see breakingchanges.txt)

- added support for specifying typed factory component selectors on a per-factory basis

- added support for using services as mixins

- added autogenerated delegate-based factories. Taking dependency on Func<IFoo> and calling the delegate will return IFoo from the container

- implemented IOC-ISSUE-203 - Add to fluent API scanning assemblies for IWindsorInstallers and installing them

- added fluent API for EventWiringFacility

- added ability to specify assemblies that will be scanned for types when shorthened type name is using via XML using the following syntax:
	<using assembly="Assembly name or path to file.dll" />
