@@ -636,6 +636,11 @@
     <Compile Include="Windsor\Configuration\Interpreters\XmlProcessor\XmlProcessorException.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Windsor\Debugging\ContainerDebuggerProxy.cs" />
+    <Compile Include="Windsor\Debugging\HandlerByKeyDebuggerView.cs" />
+    <Compile Include="Windsor\Debugging\HandlerDebuggerProxy.cs" />
+    <Compile Include="Windsor\Debugging\HandlersByKeyDictionaryDebuggerView.cs" />
+    <Compile Include="Windsor\Debugging\KernelDebuggerProxy.cs" />
     <Compile Include="Windsor\IEnvironmentInfo.cs" />
     <Compile Include="Windsor\InitializationException.cs">
       <SubType>Code</SubType>
